--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,12 @@
   ],
   "hints": {
     "meta-viewport": "off",
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ]
   }
 }
